2001-08-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Bump version to 1.3.8.

	* INSTALL.bicpl: 
	* NEWS: Updated.

	* Makefile.am (libbicpl_la_LDFLAGS): Increment current version for
	library, due to 2001-07-04 change.

	* configure.in: Bump version to 1.3.7.
	Add AC_PREREQ to force autoconf 2.5x usage.

2001-07-25  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* m4/smr_OPTIONAL_LIB.m4: Define HAVE_libfoo, if library foo is
	found.

	* configure.in: Accomodate above change.

2001-07-24  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/Makefile.am: Don't build biobj2ply, make_mesh_map.

	* autogen.sh: Improved ordering; stop on error; use "aclocal -I m4".

	* acinclude.m4: Remove.

	* m4/smr_OPTIONAL_LIB.m4:
	* m4/smr_REQUIRED_LIB.m4:
	* m4/smr_WITH_BUILD_PATH.m4: New files.  These replace the old
	smr_CHECK_LIB macro in acinclude.m4.

	* Makefile.am (EXTRA_DIST): Distribute new m4 files.

	* configure.in: Use new macros.

2001-07-20  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	Tagged as release-1_3_6.

2001-07-09  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* acinclude.m4 (AC_HELP_STRING): Disable the too-clever
	pretty formatter.

2001-07-04  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Volumes/scan_polygons.c (scan_a_polygon): Add extra parameter
	specifying size of output_vertices array.

	* Include/bicpl/geom_prototypes.h: 
	* Geometry/clip_3d.c (clip_polygon_against_box): Add extra
	parameter specifying size of output_points array.  Abort if
	too many points generated.

2001-06-13  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Include/bicpl/object_prototypes.h:
	* Objects/quadmesh.c (get_quadmesh_point): 
	(get_quadmesh_n_objects): 
	(get_quadmesh_patch_indices): 
	(get_quadmesh_patch): Declare quadmesh_struct* as const.

2001-06-06  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Objects/quadmesh.c (set_quadmesh_point): Assert that
	(i,j) is a valid location.
