@@ -1,3 +1,7 @@
+2001-10-19  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
+
+	* Objects/object_io.c: Document TEXT object file format.
+
 2001-08-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* configure.in: Bump version to 1.3.8.
